--- a/css/style.css
+++ b/css/style.css
@@ -5964,3 +5964,12 @@ h3 {
   display:none;
 }
 }
+.rounded {
+  border-radius:.5rem!important
+}
+
+.opacitys{
+  background-color: rgba(0, 0, 0, 0.5);
+  padding:30px 30px !important;
+	border-radius:5px;
+}
